fixed header width overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
     src: url("./fonts/notes.otf");
 }
 @font-face {
-    font-family: '';
-    /* src: url("./fonts/"); */
+    font-family: 'micross';
+    src: url("./fonts/micross.ttf");
 }
 @font-face {
     font-family: 'tonsushi';
@@ -18,7 +18,7 @@
 
 * {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif!important;
-    /* font-family: '' !important; */
+    /* font-family: 'micross' !important; */
 }
 
 body {
